--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
+    "firebase": "^8.2.6",
     "fs": "0.0.1-security",
     "icons": "^1.0.0",
     "material": "^0.4.3",
